...
    <string name="accident">Accident</string>
    <string name="accident_lowercase">accident</string>
    <string name="add_another_time_period">Add another time period</string>
    <string name="add_confirmation_button">Add</string>
    <string name="add_favorite_label">add favorite</string>
...
    <string name="alert_summary_timeframe_this_week">" through %1$s"</string>
    <string name="alerts_channel" translatable="false">Service Alerts</string>
    <string name="all_day">All day</string>
    <string name="alternative_path">Alternative path</string>
    <string name="amber_alert">Amber Alert</string>
...
    <string name="crowding_unknown">Crowding unknown</string>
    <string name="current_locale">en</string>
    <string name="custom">Custom</string>
    <string name="daily">Daily</string>
    <string name="delay">Delay</string>
...
    <string name="delays_unknown_reason">&lt;b&gt;Delays&lt;/b&gt;</string>
    <string name="delete">Delete</string>
    <string name="delete_time_period">Delete time period</string>
    <string name="demonstration">Demonstration</string>
    <string name="demonstration_lowercase">demonstration</string>
...
    <string name="en_dash_range">%1$s – %2$s</string>
    <string name="end">End</string>
    <string name="end_of_service">end of service</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="escalator_closed_sentence_case">Escalator closed</string>
    <string name="escalator_closure">Escalator Closure</string>
    <string name="evening">Evening</string>
    <string name="exact_hours_format_abbr">&lt;b&gt;%1$d&lt;/b&gt; hr</string>
    <string name="expand_remaining_stops">expand remaining stops</string>
...
    <string name="from">From</string>
    <string name="full_description">Full Description</string>
    <string name="get_disruption_notifications">Get disruption notifications</string>
    <string name="good_morning">Good morning!</string>
    <string name="got_it">Got it</string>
...
    <string name="medical_emergency">Medical Emergency</string>
    <string name="medical_emergency_lowercase">medical emergency</string>
    <string name="midday">Midday</string>
    <string name="minutes_abbr">&lt;b&gt;%1$d&lt;/b&gt; min</string>
    <string name="modified_service">Modified Service</string>
...
    <string name="more_section_support_note_hours">Monday through Friday: 6:30 AM - 8 PM</string>
    <string name="more_title">MBTA Go</string>
    <string name="morning">Morning</string>
    <string name="nearby_transit">Nearby Transit</string>
    <string name="nearby_transit_link">Nearby</string>
    <string name="new_feature_screen_reader_header_prefix">New feature. %1$s</string>
    <string name="next_day">next day</string>
    <string name="next_stop">Next stop</string>
    <string name="next_trip_at">Next trip at &lt;b&gt;%1$s&lt;/b&gt;</string>
...
    <string name="notifications_enabled">notifications enabled</string>
    <string name="notifications_favorites_hint">Now &lt;u>edit your favorites&lt;/u> to get disruption notifications</string>
    <string name="notifications_settings_link">Allow Notifications in Settings</string>
    <string name="now">Now</string>
    <string name="now_at">Now at</string>
    <string name="okay">Okay</string>
    <string name="onboarding_continue">Continue</string>
    <string name="onboarding_feedback_advance">Get started</string>
...
    <string name="scheduled_to_depart_selected_stop_accessibility_desc">Selected %1$s scheduled to depart %2$s, selected stop</string>
    <string name="search_by_stop">Search by stop</string>
    <string name="select_end_time">Select end time</string>
    <string name="select_start_time">Select start time</string>
    <string name="selected_stop">%1$s, selected stop</string>
    <string name="selected_stop_first_stop">%1$s, selected stop, first stop</string>
...
    <string name="service_change">Service Change</string>
    <string name="service_change_sentence_case">Service change</string>
    <string name="service_day_start">start of service</string>
    <string name="service_day_end">end of service</string>
    <string name="service_ended">Service ended</string>
...
    <string name="tie_replacement">Tie Replacement</string>
    <string name="tie_replacement_lowercase">tie replacement</string>
    <string name="time_picker_type_toggle">Time picker type toggle</string>
    <string name="to">To</string>
    <string name="to_lowercase">to</string>
...
